--- a/css/styles.css
+++ b/css/styles.css
@@ -186,9 +186,24 @@ body {
 }
 
 #wishlist-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-items: center;
+  padding: 20px;
+}
+
+.wishlist-main-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  justify-items: center;
+  padding: 20px;
+}
+
+.wishlist-main-container h1 {
+  text-align: center;
 }
 
 .remove-btn {
@@ -246,25 +261,6 @@ body {
   font-size: 1rem;
   color: #444;
 }
-
-/* .wishlist-btn {
-  display: block;
-  background-color: #478778;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 1rem;
-  border-radius: 5px;
-  cursor: pointer;
-  text-align: center;
-  width: 100%;
-  max-width: 200px;
-  margin: 20px auto;
-}
-
-.wishlist-btn:hover {
-  background-color: #2e8b57;
-} */
 
 /* Responsive design for mobile */
 @media (max-width: 768px) {
