--- a/css/styles.css
+++ b/css/styles.css
@@ -105,11 +105,11 @@ body {
   cursor: pointer;
   font-size: 20px;
   color: #aaa;
-  display: none; 
+  display: none;
 }
 
 .clear-icon.visible {
-  display: inline; 
+  display: inline;
 }
 
 .books-container {
@@ -292,6 +292,45 @@ body {
 #book-details-container li {
   font-size: 1rem;
   color: #444;
+}
+
+/* Loader container */
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Hidden class to toggle visibility */
+.hidden {
+  display: none;
+}
+
+/* Spinner styling */
+.spinner {
+  border: 12px solid #f3f3f3;
+  border-top: 12px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+/* Spinner animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Responsive design for mobile */
